--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:03:50 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:04:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -140,28 +140,12 @@ body {
   </thead>
   <tbody>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Daniel Berger -1
--1 thru 6</td>
-      <td>Justin Thomas(W) E
-E thru 4</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
-Not started</td>
-      <td class="greyout">Tony Finau +1
-+1 thru 4</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Justin Thomas E
-E thru 4</td>
+E thru 5</td>
       <td>Cameron Smith E
 E thru 6</td>
       <td>Viktor Hovland E
@@ -169,29 +153,13 @@ Not started</td>
       <td class="greyout leftborder">Rory McIlroy E
 Not started</td>
       <td class="greyout">Tommy Fleetwood(W) +1
-+1 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
-      <td>Daniel Berger -1
--1 thru 6</td>
-      <td>Corey Conners(W) E
-Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Robert MacIntyre E
-Not started</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Patrick Cantlay E
@@ -201,7 +169,7 @@ Not started</td>
       <td class="greyout leftborder">Corey Conners E
 Not started</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -211,19 +179,19 @@ Not started</td>
       <td>Dustin Johnson E
 Not started</td>
       <td>Justin Thomas E
-E thru 4</td>
+E thru 5</td>
       <td>Corey Conners E
 Not started</td>
       <td class="greyout leftborder">Russell Henley E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 5</td>
+      <td class="greyout">Louis Oosthuizen +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-E thru 3</td>
+E thru 4</td>
       <td>Cameron Smith E
 E thru 6</td>
       <td>Xander Schauffele E
@@ -249,7 +217,7 @@ Not started</td>
       <td class="greyout leftborder">Patrick Reed E
 Not started</td>
       <td class="greyout">Luke List +2
-+2 thru 7</td>
++2 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -257,7 +225,7 @@ Not started</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td>Justin Thomas E
-E thru 4</td>
+E thru 5</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
@@ -271,23 +239,23 @@ Not started</td>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
       <td>Will Zalatoris E
 Not started</td>
       <td class="greyout leftborder">Tony Finau +1
 +1 thru 4</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-E thru 3</td>
+E thru 4</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Brooks Koepka E
@@ -297,7 +265,23 @@ Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 6</td>
++1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">0</td>
+      <td>Justin Thomas(W) E
+E thru 5</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Will Zalatoris E
+Not started</td>
+      <td class="greyout leftborder">Daniel Berger E
+E thru 7</td>
+      <td class="greyout">Tony Finau +1
++1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -319,7 +303,7 @@ Not started</td>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
@@ -328,14 +312,14 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Corey Conners E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 5</td>
+      <td class="greyout">Louis Oosthuizen +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
       <td>Brooks Koepka E
@@ -345,7 +329,7 @@ E thru 6</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
@@ -362,6 +346,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Tony Finau +1
 +1 thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) E
+Not started</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td>Daniel Berger E
+E thru 7</td>
+      <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
+      <td class="greyout">Robert MacIntyre E
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -393,7 +393,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas E
-E thru 4</td>
+E thru 5</td>
     </tr>
   </tbody>
 </table>
