--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:03:50 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:04:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -153,7 +153,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -169,13 +169,13 @@ Not started</td>
       <td class="greyout leftborder">Cameron Smith E
 E thru 6</td>
       <td class="greyout">Hideki Matsuyama +1
-+1 thru 4</td>
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
       <td class="bigbold">-1</td>
       <td>Adam Scott -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Brooks Koepka(W) E
 Not started</td>
       <td>Patrick Cantlay E
@@ -185,45 +185,29 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 3</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Daniel Berger -1
--1 thru 6</td>
-      <td>Justin Thomas(W) E
 E thru 4</td>
-      <td>Patrick Cantlay E
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
-Not started</td>
-      <td class="greyout">Xander Schauffele E
-Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Don Shaw</td>
       <td class="bigbold">-1</td>
-      <td>Daniel Berger -1
+      <td>Tiger Woods -1
 -1 thru 6</td>
-      <td>Corey Conners(W) E
+      <td>Jon Rahm(W) E
 Not started</td>
-      <td>Robert MacIntyre E
+      <td>Sam Burns E
 Not started</td>
-      <td>Collin Morikawa E
+      <td>Corey Conners E
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
+      <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
-      <td class="greyout">Jordan Spieth E
-Not started</td>
+      <td class="greyout">Cameron Smith E
+E thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Sam Burns E
@@ -236,10 +220,58 @@ Not started</td>
 E thru 6</td>
     </tr>
     <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">-1</td>
+      <td>Tiger Woods -1
+-1 thru 6</td>
+      <td>Collin Morikawa(W) E
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Rory McIlroy E
+Not started</td>
+      <td class="greyout leftborder">Justin Thomas E
+E thru 5</td>
+      <td class="greyout">Gary Woodland E
+E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-1</td>
+      <td>Tiger Woods(W) -1
+-1 thru 6</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Rory McIlroy E
+Not started</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td class="greyout leftborder">Justin Thomas E
+E thru 5</td>
+      <td class="greyout">Will Zalatoris E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-1</td>
+      <td>Tiger Woods -1
+-1 thru 6</td>
+      <td>Rory McIlroy(W) E
+Not started</td>
+      <td>Xander Schauffele E
+Not started</td>
+      <td>Cameron Smith E
+E thru 6</td>
+      <td class="greyout leftborder">Justin Thomas E
+E thru 5</td>
+      <td class="greyout">Hideki Matsuyama +1
++1 thru 5</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Sam Burns E
 Not started</td>
       <td>Corey Conners E
@@ -249,13 +281,13 @@ E thru 10</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Shane Lowry(W) +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Viktor Hovland E
@@ -265,7 +297,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -303,17 +335,17 @@ Not started</td>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
       <td>Will Zalatoris E
 Not started</td>
       <td class="greyout leftborder">Tony Finau +1
 +1 thru 4</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
@@ -327,25 +359,9 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas E
-E thru 4</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 5</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">0</td>
-      <td>Jon Rahm(W) E
-Not started</td>
-      <td>Sam Burns E
-Not started</td>
-      <td>Corey Conners E
-Not started</td>
-      <td>Xander Schauffele E
-Not started</td>
-      <td class="greyout leftborder">Cameron Smith E
-E thru 6</td>
-      <td class="greyout">Tiger Woods E
 E thru 5</td>
+      <td class="greyout">Louis Oosthuizen +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -357,7 +373,7 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Webb Simpson E
 Not started</td>
       <td class="greyout">Will Zalatoris E
@@ -383,7 +399,7 @@ Not started</td>
       <td class="bigbold">Yellow in Augusta</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Brooks Koepka E
@@ -423,7 +439,7 @@ Not started</td>
       <td>Tyrrell Hatton E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout">Cameron Smith E
 E thru 6</td>
     </tr>
@@ -439,15 +455,31 @@ Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td class="greyout leftborder">Hideki Matsuyama +1
-+1 thru 4</td>
++1 thru 5</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">0</td>
+      <td>Justin Thomas(W) E
+E thru 5</td>
+      <td>Daniel Berger E
+E thru 7</td>
+      <td>Patrick Cantlay E
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm E
+Not started</td>
+      <td class="greyout">Xander Schauffele E
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-E thru 3</td>
+E thru 4</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Cameron Smith E
@@ -457,13 +489,13 @@ Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Hideki Matsuyama +1
-+1 thru 4</td>
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Sam Burns E
 Not started</td>
       <td>Viktor Hovland E
@@ -479,7 +511,7 @@ Not started</td>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-E thru 3</td>
+E thru 4</td>
       <td>Corey Conners E
 Not started</td>
       <td>Jon Rahm E
@@ -495,7 +527,7 @@ Not started</td>
       <td class="bigbold">Philip Dale</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Brooks Koepka E
@@ -503,7 +535,7 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
     </tr>
@@ -511,7 +543,7 @@ Not started</td>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Brooks Koepka E
@@ -519,6 +551,22 @@ Not started</td>
       <td>Collin Morikawa E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
+Not started</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) E
+Not started</td>
+      <td>Daniel Berger E
+E thru 7</td>
+      <td>Robert MacIntyre E
+E thru 1</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm E
 Not started</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
@@ -535,9 +583,9 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 3</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 5</td>
+E thru 4</td>
+      <td class="greyout">Louis Oosthuizen +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -567,7 +615,7 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
     </tr>
@@ -583,9 +631,9 @@ Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas E
-E thru 4</td>
+E thru 5</td>
       <td class="greyout">Hideki Matsuyama +1
-+1 thru 4</td>
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -601,7 +649,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -615,25 +663,9 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 3</td>
-      <td class="greyout">Shane Lowry +1
-+1 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">0</td>
-      <td>Collin Morikawa(W) E
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Rory McIlroy E
-Not started</td>
-      <td>Justin Thomas E
 E thru 4</td>
-      <td class="greyout leftborder">Gary Woodland E
-Not started</td>
-      <td class="greyout">Tiger Woods E
-E thru 5</td>
+      <td class="greyout">Shane Lowry +1
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -665,13 +697,13 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas E
-E thru 4</td>
+E thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Brooks Koepka E
@@ -697,35 +729,19 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas E
-E thru 4</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">0</td>
-      <td>Tiger Woods(W) E
 E thru 5</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Rory McIlroy E
-Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td class="greyout leftborder">Justin Thomas E
-E thru 4</td>
-      <td class="greyout">Will Zalatoris E
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-E thru 3</td>
+E thru 4</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Corey Conners E
 Not started</td>
       <td>Robert MacIntyre E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Rory McIlroy E
 Not started</td>
       <td class="greyout">Jon Rahm E
@@ -743,15 +759,15 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas E
-E thru 4</td>
+E thru 5</td>
       <td class="greyout">Hideki Matsuyama +1
-+1 thru 4</td>
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
       <td>Brooks Koepka E
@@ -761,13 +777,13 @@ E thru 6</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Jon Rahm E
@@ -776,14 +792,14 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 5</td>
+      <td class="greyout">Louis Oosthuizen +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-E thru 3</td>
+E thru 4</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Billy Horschel E
@@ -799,7 +815,7 @@ E thru 6</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Corey Conners E
 Not started</td>
       <td>Brooks Koepka E
@@ -823,7 +839,7 @@ Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas E
-E thru 4</td>
+E thru 5</td>
       <td class="greyout">Will Zalatoris E
 Not started</td>
     </tr>
@@ -841,7 +857,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Justin Thomas E
-E thru 4</td>
+E thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -855,15 +871,15 @@ Not started</td>
       <td>Jon Rahm E
 Not started</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Hideki Matsuyama +1
-+1 thru 4</td>
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Sam Burns E
 Not started</td>
       <td>Rory McIlroy E
@@ -887,7 +903,7 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout">Will Zalatoris E
 Not started</td>
     </tr>
@@ -921,23 +937,23 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Corey Conners E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -949,7 +965,7 @@ Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Cameron Smith E
 E thru 6</td>
       <td class="greyout">Will Zalatoris E
@@ -959,7 +975,7 @@ Not started</td>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Viktor Hovland E
@@ -969,7 +985,7 @@ Not started</td>
       <td class="greyout leftborder">Cameron Smith E
 E thru 6</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -991,17 +1007,17 @@ Not started</td>
       <td class="bigbold">Wylie</td>
       <td class="bigbold">0</td>
       <td>Justin Thomas(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 5</td>
+      <td class="greyout">Louis Oosthuizen +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -1015,9 +1031,9 @@ Not started</td>
       <td>Cameron Smith E
 E thru 6</td>
       <td class="greyout leftborder">Shane Lowry +1
++1 thru 7</td>
+      <td class="greyout">Louis Oosthuizen +1
 +1 thru 6</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -1033,23 +1049,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 3</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">0</td>
-      <td>Rory McIlroy(W) E
-Not started</td>
-      <td>Xander Schauffele E
-Not started</td>
-      <td>Cameron Smith E
-E thru 6</td>
-      <td>Justin Thomas E
 E thru 4</td>
-      <td class="greyout leftborder">Tiger Woods E
-E thru 5</td>
-      <td class="greyout">Hideki Matsuyama +1
-+1 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -1065,7 +1065,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 3</td>
+E thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -1079,9 +1079,9 @@ Not started</td>
       <td>Tony Finau +1
 +1 thru 4</td>
       <td class="greyout leftborder">Shane Lowry +1
++1 thru 7</td>
+      <td class="greyout">Louis Oosthuizen +1
 +1 thru 6</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 5</td>
     </tr>
   </tbody>
 </table>
