--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:18:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:19:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -140,60 +140,76 @@ body {
   </thead>
   <tbody>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-1</td>
+      <td>Daniel Berger -1
+-1 thru 8</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Will Zalatoris E
+Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 6</td>
+      <td class="greyout">Tony Finau +1
++1 thru 5</td>
+    </tr>
+    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -1
 -1 thru 7</td>
-      <td>Justin Thomas E
-E thru 5</td>
       <td>Cameron Smith E
-E thru 6</td>
+E thru 7</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td class="greyout leftborder">Rory McIlroy E
+      <td>Rory McIlroy E
 Not started</td>
-      <td class="greyout">Tommy Fleetwood(W) +1
+      <td class="greyout leftborder">Tommy Fleetwood(W) +1
 +1 thru 7</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 6</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-1</td>
+      <td>Daniel Berger -1
+-1 thru 8</td>
+      <td>Corey Conners(W) E
+Not started</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
+      <td class="greyout">Robert MacIntyre E
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-E thru 5</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Tyrrell Hatton E
 Not started</td>
-      <td class="greyout leftborder">Corey Conners E
-Not started</td>
-      <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">0</td>
-      <td>Xander Schauffele(W) E
-Not started</td>
-      <td>Dustin Johnson E
-Not started</td>
-      <td>Justin Thomas E
-E thru 5</td>
       <td>Corey Conners E
 Not started</td>
-      <td class="greyout leftborder">Russell Henley E
-Not started</td>
-      <td class="greyout">Louis Oosthuizen +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 6</td>
+      <td class="greyout">Shane Lowry +1
++1 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Cameron Smith E
-E thru 6</td>
+E thru 7</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Sam Burns E
@@ -224,38 +240,22 @@ Not started</td>
       <td class="bigbold">0</td>
       <td>Viktor Hovland(W) E
 Not started</td>
-      <td>Justin Thomas E
-E thru 5</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay E
-Not started</td>
-      <td class="greyout">Sungjae Im E
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-E thru 5</td>
       <td>Patrick Cantlay E
 Not started</td>
-      <td>Scottie Scheffler E
-E thru 4</td>
-      <td>Will Zalatoris E
+      <td class="greyout leftborder">Sungjae Im E
 Not started</td>
-      <td class="greyout leftborder">Tony Finau +1
-+1 thru 5</td>
-      <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-E thru 4</td>
+E thru 5</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Brooks Koepka E
@@ -268,26 +268,10 @@ Not started</td>
 +1 thru 8</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-E thru 5</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Will Zalatoris E
-Not started</td>
-      <td class="greyout leftborder">Daniel Berger E
-E thru 7</td>
-      <td class="greyout">Tony Finau +1
-+1 thru 5</td>
-    </tr>
-    <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith(W) E
-E thru 6</td>
+E thru 7</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
@@ -302,32 +286,32 @@ Not started</td>
     <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-E thru 5</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Corey Conners E
+      <td>Corey Conners E
 Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 6</td>
       <td class="greyout">Louis Oosthuizen +1
 +1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-E thru 5</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Cameron Smith E
-E thru 6</td>
-      <td class="greyout leftborder">Will Zalatoris E
+E thru 7</td>
+      <td>Will Zalatoris E
 Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 6</td>
       <td class="greyout">Shane Lowry +1
 +1 thru 8</td>
     </tr>
@@ -346,22 +330,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Tony Finau +1
 +1 thru 5</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners(W) E
-Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td>Daniel Berger E
-E thru 7</td>
-      <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Robert MacIntyre E
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -383,7 +351,7 @@ Not started</td>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith(W) E
-E thru 6</td>
+E thru 7</td>
       <td>Corey Conners E
 Not started</td>
       <td>Viktor Hovland E
@@ -392,8 +360,40 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas E
+      <td class="greyout">Justin Thomas +1
++1 thru 6</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">1</td>
+      <td>Xander Schauffele(W) E
+Not started</td>
+      <td>Dustin Johnson E
+Not started</td>
+      <td>Corey Conners E
+Not started</td>
+      <td>Justin Thomas +1
++1 thru 6</td>
+      <td class="greyout leftborder">Louis Oosthuizen +1
++1 thru 7</td>
+      <td class="greyout">Russell Henley +2
++2 thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">1</td>
+      <td>Patrick Cantlay E
+Not started</td>
+      <td>Scottie Scheffler E
 E thru 5</td>
+      <td>Will Zalatoris E
+Not started</td>
+      <td>Justin Thomas(W) +1
++1 thru 6</td>
+      <td class="greyout leftborder">Tony Finau +1
++1 thru 5</td>
+      <td class="greyout">Shane Lowry +1
++1 thru 8</td>
     </tr>
   </tbody>
 </table>
