--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:19:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:20:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -153,7 +153,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 6</td>
       <td class="greyout">Tony Finau +1
-+1 thru 5</td>
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -167,7 +167,7 @@ Not started</td>
       <td>Rory McIlroy E
 Not started</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +1
-+1 thru 7</td>
++1 thru 8</td>
       <td class="greyout">Justin Thomas +1
 +1 thru 6</td>
     </tr>
@@ -177,7 +177,7 @@ Not started</td>
       <td>Daniel Berger -1
 -1 thru 8</td>
       <td>Corey Conners(W) E
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Jon Rahm E
@@ -197,7 +197,7 @@ Not started</td>
       <td>Tyrrell Hatton E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 6</td>
       <td class="greyout">Shane Lowry +1
@@ -217,7 +217,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Corey Conners E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -293,7 +293,7 @@ Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 6</td>
       <td class="greyout">Louis Oosthuizen +1
@@ -329,7 +329,7 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Tony Finau +1
-+1 thru 5</td>
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -353,7 +353,7 @@ Not started</td>
       <td>Cameron Smith(W) E
 E thru 7</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
@@ -371,7 +371,7 @@ Not started</td>
       <td>Dustin Johnson E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Justin Thomas +1
 +1 thru 6</td>
       <td class="greyout leftborder">Louis Oosthuizen +1
@@ -391,7 +391,7 @@ Not started</td>
       <td>Justin Thomas(W) +1
 +1 thru 6</td>
       <td class="greyout leftborder">Tony Finau +1
-+1 thru 5</td>
++1 thru 6</td>
       <td class="greyout">Shane Lowry +1
 +1 thru 8</td>
     </tr>
