--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:19:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:20:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ body {
       <td>Cameron Smith(W) E
 E thru 7</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
@@ -163,7 +163,7 @@ E thru 5</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Cameron Smith E
@@ -197,7 +197,7 @@ Not started</td>
       <td>Sam Burns E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Cameron Smith E
@@ -225,7 +225,7 @@ Not started</td>
       <td>Daniel Berger -1
 -1 thru 8</td>
       <td>Corey Conners(W) E
-Not started</td>
+E thru 1</td>
       <td>Robert MacIntyre E
 E thru 1</td>
       <td>Collin Morikawa E
@@ -307,7 +307,7 @@ E thru 7</td>
       <td>Sam Burns E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Brian Harman E
 E thru 11</td>
       <td class="greyout leftborder">Viktor Hovland E
@@ -385,7 +385,7 @@ Not started</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Scottie Scheffler E
@@ -403,7 +403,7 @@ Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td class="greyout leftborder">Cameron Smith E
@@ -431,7 +431,7 @@ Not started</td>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">0</td>
       <td>Corey Conners(W) E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Jon Rahm E
@@ -451,7 +451,7 @@ Not started</td>
       <td>Sam Burns E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Tyrrell Hatton E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
@@ -513,7 +513,7 @@ Not started</td>
       <td>Scottie Scheffler(W) E
 E thru 5</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
@@ -627,7 +627,7 @@ Not started</td>
       <td>Sam Burns E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td class="greyout leftborder">Jon Rahm E
@@ -657,7 +657,7 @@ E thru 5</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Rory McIlroy E
@@ -673,7 +673,7 @@ Not started</td>
       <td>Cameron Smith(W) E
 E thru 7</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
@@ -705,7 +705,7 @@ Not started</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
       <td>Xander Schauffele E
@@ -723,7 +723,7 @@ E thru 5</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Robert MacIntyre E
 E thru 1</td>
       <td class="greyout leftborder">Rory McIlroy E
@@ -737,7 +737,7 @@ Not started</td>
       <td>Cameron Smith(W) E
 E thru 7</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Marc Leishman E
 Not started</td>
       <td>Xander Schauffele E
@@ -799,7 +799,7 @@ E thru 7</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">0</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Rory McIlroy E
@@ -849,7 +849,7 @@ Not started</td>
       <td>Cameron Smith(W) E
 E thru 7</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Jon Rahm E
@@ -881,7 +881,7 @@ E thru 7</td>
       <td>Cameron Smith(W) E
 E thru 7</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Scottie Scheffler E
@@ -927,7 +927,7 @@ E thru 5</td>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">0</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Scottie Scheffler E
@@ -945,7 +945,7 @@ Not started</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Scottie Scheffler E
@@ -1011,7 +1011,7 @@ Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Corey Conners E
-Not started</td>
+E thru 1</td>
       <td>Cameron Smith E
 E thru 7</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -1063,7 +1063,7 @@ Not started</td>
       <td>Justin Thomas(W) +1
 +1 thru 6</td>
       <td class="greyout leftborder">Tony Finau +1
-+1 thru 5</td>
++1 thru 6</td>
       <td class="greyout">Shane Lowry +1
 +1 thru 8</td>
     </tr>
@@ -1077,7 +1077,7 @@ Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td>Tony Finau +1
-+1 thru 5</td>
++1 thru 6</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 thru 8</td>
       <td class="greyout">Louis Oosthuizen +1
