--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:26:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:27:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,22 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-2</td>
+      <td>Daniel Berger -1
+-1 thru 8</td>
+      <td>Robert MacIntyre -1
+-1 thru 2</td>
+      <td>Corey Conners(W) E
+E thru 1</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm E
+Not started</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
+    </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-2</td>
@@ -169,7 +185,7 @@ Not started</td>
       <td class="greyout leftborder">Cameron Smith E
 E thru 7</td>
       <td class="greyout">Hideki Matsuyama +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -220,22 +236,6 @@ Not started</td>
 +1 thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
-      <td>Daniel Berger -1
--1 thru 8</td>
-      <td>Corey Conners(W) E
-E thru 1</td>
-      <td>Robert MacIntyre E
-E thru 1</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
-Not started</td>
-      <td class="greyout">Jordan Spieth E
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -1
@@ -284,6 +284,38 @@ Not started</td>
 +1 thru 6</td>
     </tr>
     <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-1</td>
+      <td>Robert MacIntyre -1
+-1 thru 2</td>
+      <td>Scottie Scheffler(W) E
+E thru 5</td>
+      <td>Patrick Cantlay E
+Not started</td>
+      <td>Corey Conners E
+E thru 1</td>
+      <td class="greyout leftborder">Rory McIlroy E
+Not started</td>
+      <td class="greyout">Jon Rahm E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">-1</td>
+      <td>Justin Rose -1
+-1 thru 2</td>
+      <td>Sam Burns E
+Not started</td>
+      <td>Rory McIlroy E
+Not started</td>
+      <td>Xander Schauffele E
+Not started</td>
+      <td class="greyout leftborder">Cameron Smith E
+E thru 7</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 6</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-1</td>
       <td>Tiger Woods -1
@@ -295,7 +327,7 @@ Not started</td>
       <td>Cameron Smith E
 E thru 7</td>
       <td class="greyout leftborder">Hideki Matsuyama +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas +1
 +1 thru 6</td>
     </tr>
@@ -471,7 +503,7 @@ Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td class="greyout leftborder">Hideki Matsuyama +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
@@ -489,7 +521,7 @@ Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Hideki Matsuyama +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -583,7 +615,7 @@ Not started</td>
       <td>Jon Rahm E
 Not started</td>
       <td class="greyout leftborder">Patrick Reed E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
     </tr>
@@ -615,7 +647,7 @@ Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td class="greyout leftborder">Hideki Matsuyama +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas +1
 +1 thru 6</td>
     </tr>
@@ -716,22 +748,6 @@ Not started</td>
 +1 thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler(W) E
-E thru 5</td>
-      <td>Patrick Cantlay E
-Not started</td>
-      <td>Corey Conners E
-E thru 1</td>
-      <td>Robert MacIntyre E
-E thru 1</td>
-      <td class="greyout leftborder">Rory McIlroy E
-Not started</td>
-      <td class="greyout">Jon Rahm E
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith(W) E
@@ -743,7 +759,7 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Hideki Matsuyama +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Justin Thomas +1
 +1 thru 6</td>
     </tr>
@@ -857,23 +873,7 @@ Not started</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 thru 8</td>
       <td class="greyout">Hideki Matsuyama +1
-+1 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">0</td>
-      <td>Sam Burns E
-Not started</td>
-      <td>Rory McIlroy E
-Not started</td>
-      <td>Justin Rose E
-E thru 1</td>
-      <td>Xander Schauffele E
-Not started</td>
-      <td class="greyout leftborder">Cameron Smith E
-E thru 7</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
