--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:26:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:27:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,22 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-2</td>
+      <td>Daniel Berger -1
+-1 thru 8</td>
+      <td>Robert MacIntyre -1
+-1 thru 2</td>
+      <td>Corey Conners(W) E
+E thru 1</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm E
+Not started</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
+    </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
@@ -170,22 +186,6 @@ Not started</td>
 +1 thru 8</td>
       <td class="greyout">Justin Thomas +1
 +1 thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
-      <td>Daniel Berger -1
--1 thru 8</td>
-      <td>Corey Conners(W) E
-E thru 1</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Robert MacIntyre E
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -231,7 +231,7 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Patrick Reed E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Luke List +2
 +2 thru 10</td>
     </tr>
