--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:33:34 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:34:28 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,22 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -1
+-1 thru 8</td>
+      <td>Joaquin Niemann -1
+-1 thru 7</td>
+      <td>Tommy Fleetwood(W) E
+E thru 9</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td class="greyout leftborder">Rory McIlroy E
+Not started</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 7</td>
+    </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-2</td>
@@ -156,6 +172,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Larry Judge</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -1
+-1 thru 8</td>
+      <td>Scottie Scheffler(W) E
+E thru 6</td>
+      <td>Xander Schauffele E
+Not started</td>
+      <td>Sam Burns E
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
+      <td class="greyout">Corey Conners E
+E thru 1</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
       <td>Daniel Berger -1
@@ -167,25 +199,57 @@ Not started</td>
       <td>Will Zalatoris E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Tony Finau +1
 +1 thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">John Nixon</td>
       <td class="bigbold">-1</td>
-      <td>Joaquin Niemann -1
--1 thru 7</td>
-      <td>Cameron Smith E
-E thru 7</td>
+      <td>Cameron Smith(W) -1
+-1 thru 8</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Xander Schauffele E
+Not started</td>
+      <td class="greyout leftborder">Rory McIlroy E
+Not started</td>
+      <td class="greyout">Patrick Cantlay E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -1
+-1 thru 8</td>
+      <td>Matthew Fitzpatrick E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Will Zalatoris E
+Not started</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 7</td>
+      <td class="greyout">Shane Lowry +1
++1 thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith(W) -1
+-1 thru 8</td>
+      <td>Corey Conners E
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td>Rory McIlroy E
+      <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +1
-+1 thru 8</td>
+      <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
       <td class="greyout">Justin Thomas +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -199,25 +263,9 @@ Not started</td>
       <td>Corey Conners E
 E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Shane Lowry +1
 +1 thru 8</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler(W) E
-E thru 5</td>
-      <td>Cameron Smith E
-E thru 7</td>
-      <td>Xander Schauffele E
-Not started</td>
-      <td>Sam Burns E
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Corey Conners E
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -249,13 +297,13 @@ Not started</td>
       <td class="greyout leftborder">Sungjae Im E
 Not started</td>
       <td class="greyout">Justin Thomas +1
-+1 thru 6</td>
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-E thru 5</td>
+E thru 6</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Brooks Koepka E
@@ -266,22 +314,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Shane Lowry +1
 +1 thru 8</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-E thru 7</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Xander Schauffele E
-Not started</td>
-      <td class="greyout leftborder">Rory McIlroy E
-Not started</td>
-      <td class="greyout">Patrick Cantlay E
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -295,25 +327,9 @@ Not started</td>
       <td>Corey Conners E
 E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Louis Oosthuizen +1
 +1 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">0</td>
-      <td>Matthew Fitzpatrick E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Cameron Smith E
-E thru 7</td>
-      <td>Will Zalatoris E
-Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 6</td>
-      <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
@@ -348,22 +364,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith(W) E
-E thru 7</td>
-      <td>Corey Conners E
-E thru 1</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Xander Schauffele E
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 6</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">1</td>
       <td>Xander Schauffele(W) E
@@ -373,7 +373,7 @@ Not started</td>
       <td>Corey Conners E
 E thru 1</td>
       <td>Justin Thomas +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout leftborder">Louis Oosthuizen +1
 +1 thru 7</td>
       <td class="greyout">Russell Henley +2
@@ -385,11 +385,11 @@ E thru 1</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 5</td>
+E thru 6</td>
       <td>Will Zalatoris E
 Not started</td>
       <td>Justin Thomas(W) +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout leftborder">Tony Finau +1
 +1 thru 6</td>
       <td class="greyout">Shane Lowry +1
