--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:40:45 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:41:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,38 +139,6 @@ body {
   </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-3</td>
-      <td>Talor Gooch -2
--2 thru 9</td>
-      <td>Cameron Smith(W) -1
--1 thru 8</td>
-      <td>Corey Conners E
-E thru 1</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
-      <td class="greyout">Scottie Scheffler E
-E thru 6</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-3</td>
-      <td>Talor Gooch -2
--2 thru 9</td>
-      <td>Cameron Smith -1
--1 thru 8</td>
-      <td>Jon Rahm(W) E
-Not started</td>
-      <td>Corey Conners E
-E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka E
-Not started</td>
-      <td class="greyout">Hideki Matsuyama +1
-+1 thru 7</td>
-    </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">-2</td>
@@ -188,26 +156,10 @@ E thru 1</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-2</td>
-      <td>Daniel Berger -1
--1 thru 8</td>
-      <td>Robert MacIntyre -1
--1 thru 2</td>
-      <td>Corey Conners(W) E
-E thru 1</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
-Not started</td>
-      <td class="greyout">Jordan Spieth E
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-2</td>
       <td>Joaquin Niemann -1
--1 thru 7</td>
+-1 thru 8</td>
       <td>Cameron Smith -1
 -1 thru 8</td>
       <td>Jon Rahm(W) E
@@ -300,22 +252,6 @@ Not started</td>
 E thru 6</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Daniel Berger -1
--1 thru 8</td>
-      <td>Patrick Cantlay E
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Doug Muir</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -1
@@ -330,6 +266,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Hideki Matsuyama +1
 +1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-1</td>
+      <td>Robert MacIntyre -1
+-1 thru 3</td>
+      <td>Corey Conners(W) E
+E thru 1</td>
+      <td>Daniel Berger E
+E thru 9</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm E
+Not started</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -348,6 +300,22 @@ E thru 6</td>
 +1 thru 7</td>
     </tr>
     <tr>
+      <td class="bigbold">Luke Watson</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith(W) -1
+-1 thru 8</td>
+      <td>Corey Conners E
+E thru 1</td>
+      <td>Talor Gooch E
+E thru 10</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td class="greyout leftborder">Xander Schauffele E
+Not started</td>
+      <td class="greyout">Scottie Scheffler E
+E thru 6</td>
+    </tr>
+    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith(W) -1
@@ -361,7 +329,7 @@ Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
 E thru 6</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -431,7 +399,7 @@ Not started</td>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-1</td>
       <td>Robert MacIntyre -1
--1 thru 2</td>
+-1 thru 3</td>
       <td>Scottie Scheffler(W) E
 E thru 6</td>
       <td>Patrick Cantlay E
@@ -473,7 +441,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 7</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -503,7 +471,7 @@ Not started</td>
       <td>Jon Rahm E
 Not started</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
       <td class="greyout">Hideki Matsuyama +1
 +1 thru 7</td>
     </tr>
@@ -521,7 +489,7 @@ E thru 6</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Russell Henley +2
-+2 thru 1</td>
++2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -556,6 +524,22 @@ E thru 6</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -1
+-1 thru 8</td>
+      <td>Jon Rahm(W) E
+Not started</td>
+      <td>Corey Conners E
+E thru 1</td>
+      <td>Talor Gooch E
+E thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka E
+Not started</td>
+      <td class="greyout">Hideki Matsuyama +1
++1 thru 7</td>
+    </tr>
+    <tr>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -1
@@ -569,7 +553,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 7</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -583,7 +567,7 @@ Not started</td>
       <td>Corey Conners E
 E thru 1</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
       <td class="greyout">Louis Oosthuizen +1
 +1 thru 7</td>
     </tr>
@@ -607,17 +591,17 @@ E thru 6</td>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -1
--1 thru 7</td>
+-1 thru 8</td>
       <td>Sam Burns E
 Not started</td>
       <td>Corey Conners E
 E thru 1</td>
       <td>Brian Harman E
-E thru 11</td>
+E thru 12</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Shane Lowry(W) +1
-+1 thru 8</td>
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -746,6 +730,22 @@ Not started</td>
 +1 thru 7</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">0</td>
+      <td>Daniel Berger E
+E thru 9</td>
+      <td>Patrick Cantlay E
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td class="greyout leftborder">Xander Schauffele E
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -1001,7 +1001,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 7</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -1065,7 +1065,7 @@ Not started</td>
       <td class="greyout leftborder">Tony Finau +1
 +1 thru 6</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -1079,7 +1079,7 @@ Not started</td>
       <td>Tony Finau +1
 +1 thru 6</td>
       <td class="greyout leftborder">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
       <td class="greyout">Louis Oosthuizen +1
 +1 thru 7</td>
     </tr>
