--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:40:45 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:41:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,7 +145,7 @@ body {
       <td>Cameron Smith -1
 -1 thru 8</td>
       <td>Joaquin Niemann -1
--1 thru 7</td>
+-1 thru 8</td>
       <td>Tommy Fleetwood(W) E
 E thru 9</td>
       <td>Viktor Hovland E
@@ -154,22 +154,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Justin Thomas +1
 +1 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-2</td>
-      <td>Daniel Berger -1
--1 thru 8</td>
-      <td>Robert MacIntyre -1
--1 thru 2</td>
-      <td>Corey Conners(W) E
-E thru 1</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
-Not started</td>
-      <td class="greyout">Jordan Spieth E
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
@@ -186,22 +170,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Corey Conners E
 E thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Daniel Berger -1
--1 thru 8</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Will Zalatoris E
-Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 7</td>
-      <td class="greyout">Tony Finau +1
-+1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -233,7 +201,23 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 7</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-1</td>
+      <td>Robert MacIntyre -1
+-1 thru 3</td>
+      <td>Corey Conners(W) E
+E thru 1</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td class="greyout leftborder">Daniel Berger E
+E thru 9</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -265,7 +249,7 @@ E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 7</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -313,7 +297,23 @@ Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">0</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Will Zalatoris E
+Not started</td>
+      <td>Daniel Berger E
+E thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
++1 thru 7</td>
+      <td class="greyout">Tony Finau +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -377,7 +377,7 @@ E thru 1</td>
       <td class="greyout leftborder">Louis Oosthuizen +1
 +1 thru 7</td>
       <td class="greyout">Russell Henley +2
-+2 thru 1</td>
++2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -393,7 +393,7 @@ Not started</td>
       <td class="greyout leftborder">Tony Finau +1
 +1 thru 6</td>
       <td class="greyout">Shane Lowry +1
-+1 thru 8</td>
++1 thru 9</td>
     </tr>
   </tbody>
 </table>
